syntax = "proto3";
package chess_server;

service Match {
  rpc MovePiece (MoveRequest) returns (MoveResponse);
}

message MoveRequest {
  string move = 1;
}

message MoveResponse {
  bool success = 1;
  string board_state = 2;
}